--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@
 #    pip-compile --output-file requirements.txt requirements.in
 #
 dj-database-url==0.4.2
+django-localflavor==1.5.1
 django==1.11.2
 gunicorn==19.7.1
 psycopg2==2.7.1
