test postdeploy script

--- a/app.json
+++ b/app.json
@@ -4,5 +4,8 @@
   "image": "heroku/python",
   "repository": "https://github.com/heroku/python-getting-started",
   "keywords": ["python", "django" ],
-  "addons": [ "heroku-postgresql" ]
+  "addons": [ "heroku-postgresql" ],
+  "scripts": {
+    "postdeploy": "heroku config:set SECRET_KEY=$(python -c 'import random; import string; print(\"\".join([random.SystemRandom().choice(\"{}{}{}\".format(string.ascii_letters, string.digits, string.punctuation)) for i in range(50)]))')"
+  }
 }
