--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
   "env": {
     "DJANGO_SECRET_KEY": {
       "description": "A secret key for verifying the integrity of signed cookies.",
-      "generator": "secret"
+      "generator": "secret",
+      "required": true
     }
   }
 }
