--- a/app.json
+++ b/app.json
@@ -1,15 +1,14 @@
 {
   "name": "DSA Simple Signin Sheets",
+  "env": {
+    "DJANGO_SECRET_KEY": {
+      "generator": "secret",
+      "required": true
+    }
+  },
   "description": "An app to allow members to sign in to events.",
   "image": "heroku/python",
   "repository": "https://github.com/jeremylow/dsa-sign-in-sheets",
   "keywords": ["python", "django" ],
-  "addons": [ "heroku-postgresql" ],
-  "env": {
-    "DJANGO_SECRET_KEY": {
-      "description": "A secret key for verifying the integrity of signed cookies.",
-      "generator": "secret",
-      "required": true
-    }
-  }
+  "addons": [ "heroku-postgresql" ]
 }
